# BloodGlucose-App

./: .gitignore  Program.cs  RamanDevice.cs  Serial.cs  backend_dotnet.csproj
.devcontainer/: devcontainer.json  docker-compose.yml
Model/: MicroRaman.cs
Protos/: greet.proto  raman.proto
Services/: GreeterService.cs  RamanService.cs
Utils/: DataPacketedService.cs  SerialService.cs
backend_dotnet/: Program.cs  RamanDevice.cs  Serial.cs  (+2 more)
data/: s1.csv  (+14 more)
fast_api/: pyproject.toml
fast_api/.envfiles/: dev.env  prod.env
fast_api/example/: 2509150914089 250mw 3000ms.txt
fast_api/models/: AdaBoostRegressor  AdaBoostRegressor_pca  GradientBoostingRegressor  GradientBoostingRegressor_pca  GridSearch-RandomForestRegressor  GridSearch-RandomForestRegressor_pca  LinearRegression  LinearRegression_pca  MLPRegressor  MLPRegressor_pca  RandomForestRegressor  RandomForestRegressor_pca  ramanshift
fast_api/notebook/: 0-db.ipynb  1-analysis.ipynb  2-device.ipynb  3-spectrum-age.ipynb  datetime.ipynb  rpc.ipynb
fast_api/rpc/: raman_pb2.py  raman_pb2.pyi  raman_pb2_grpc.py
fast_api/src/: __init__.py  api.py  main.py
fast_api/src/db/: __init__.py  _var.py  optofile.py
fast_api/src/device/: __init__.py
fast_api/src/raman/: __init__.py
fast_api/src/spectra/: sample.py
fast_api/src/web/: __init__.py
fast_api/static/: xaxis.txt
fast_api/templates/: base-header.html  base.html  blood.html  device_control.html  home.html  item.html
fast_api/templates/component/: chart.html  collection-modal.html  collection_info.html  device.html
fast_api/tests/: rpc_test.py
(+475 files in other folders)
