[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.3",
    "pymongo>=4.15.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
