[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.3",
    "odmantic>=1.0.2",
    "pymongo>=4.15.0",
    "rampy>=0.6.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
